--- a/assets/sass/content.scss
+++ b/assets/sass/content.scss
@@ -1,7 +1,36 @@
-.container {
-  max-width: 720px;
+:root {
+  --shadow-soft: 0px 1px 4px rgba(60, 64, 67, 0.25),
+    0px 1px 3px 1px rgba(60, 64, 67, 0.15);
+}
+
+.banner {
   width: 100%;
-  margin: 0 auto 60px;
-  padding: 0 16px;
+  object-fit: cover;
+  display: block;
+  min-height: 150px;
+  max-height: 300px;
+  // box-shadow: var(--shadow-soft);
+}
+
+.container {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
   box-sizing: border-box;
+}
+
+.article {
+  margin: 60px 0;
+  padding: 0 16px;
+
+  img {
+    display: block;
+    max-width: 100%;
+    margin: 0 auto;
+    box-shadow: var(--shadow-soft);
+  }
+}
+
+iframe {
+  max-width: 100%;
 }
