--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,10 @@
 {{ define "main" }}
-<div class="home">
-  <main class="container">
-    <section class="content">
+<img class="banner" src="/header.jpg" alt="Banner depicting different mock ups.">
+<div class="container">
+  <main class="article">
+    <h1>Breaking away from screen addiction with Breakout</h1>
+    <p class="author">By Tommy Josépovic, Bowen Song, David Thai</p>
       {{ .Content }}
-    </section>
   </main>
 </div>
 {{ end }}
