--- a/assets/sass/typography.scss
+++ b/assets/sass/typography.scss
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
 :root {
-  font-family: "Lora", serif;
+  font-family: "Lato", sans-serif;
   color: var(--text);
+  text-align: justify;
 }
 
 h1,
@@ -17,23 +19,33 @@ h6,
 .h4,
 .h5,
 .h6 {
-  margin-top: 0;
+  text-align: left;
+  font-family: "Lora", serif;
+  margin-top: 4rem;
   margin-bottom: 1.5rem;
 }
 
 h1,
 .h1 {
   font-size: 46px;
-  font-weight: 500;
+  font-weight: 400;
   letter-spacing: -1.5px;
+}
+
+h2,
+.h2 {
+  font-size: 28px;
+  font-weight: 500;
 }
 
 h3,
 .h3 {
-  font-size: 48px;
-  font-weight: 300;
+  font-size: 24px;
+  font-weight: 500;
   line-height: 56px;
   letter-spacing: 0px;
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 
 h4,
@@ -102,4 +114,18 @@ label,
 a {
   color: var(--primary);
   text-decoration: none;
+}
+
+blockquote {
+  margin: 1em 0;
+  padding: 0 24px;
+  color: var(--accent);
+  border-left: 4px solid var(--accent);
+}
+
+.author {
+  margin-top: -8px;
+  font-family: "Lora", serif;
+  color: var(--text-faded);
+  font-size: 24px;
 }
