--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -1,6 +1,4 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-{{ $title := print .Title " | " .Site.Title }}
-{{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
-<title>{{ $title }}</title>
+<title>Breakout</title>
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
